@@ -5,20 +5,23 @@ import net.opanel.common.OPanelPlayer;
 import net.opanel.common.OPanelSave;
 import net.opanel.common.OPanelServer;
 import net.opanel.common.OPanelWhitelist;
+import net.opanel.utils.Utils;
 import org.bukkit.*;
 import org.bukkit.entity.Player;
 import org.bukkit.help.HelpTopic;
 
 import java.io.IOException;
+import java.lang.reflect.Method;
+import java.net.InetAddress;
+import java.net.UnknownHostException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.regex.Matcher;
 import java.util.stream.Stream;
 
 public class SpigotServer implements OPanelServer {
-    private static final Path serverIconPath = Paths.get("").resolve("server-icon.png");
-
     private final Main plugin;
     private final Server server;
 
@@ -29,17 +32,25 @@ public class SpigotServer implements OPanelServer {
 
     @Override
     public ServerType getServerType() {
+        if(Utils.hasClass("com.destroystokyo.paper.PaperConfig")) {
+            return ServerType.PAPER;
+        }
+        if(Utils.hasClass("org.bukkit.entity.Player$Spigot")) {
+            return ServerType.SPIGOT;
+        }
         return ServerType.BUKKIT;
     }
 
     @Override
-    public byte[] getFavicon() {
-        if(!Files.exists(serverIconPath)) return null;
+    public void setFavicon(byte[] iconBytes) throws IOException {
+        OPanelServer.super.setFavicon(iconBytes);
+        // reload server favicon
         try {
-            return Files.readAllBytes(serverIconPath);
-        } catch (IOException e) {
-            e.printStackTrace();
-            return null;
+            Method loadIconMethod = server.getClass().getDeclaredMethod("loadIcon");
+            loadIconMethod.setAccessible(true);
+            loadIconMethod.invoke(server);
+        } catch (Exception e) {
+            plugin.LOGGER.warning("Cannot reload server favicon.");
         }
     }
 
@@ -53,12 +64,14 @@ public class SpigotServer implements OPanelServer {
         // Call setMotd() first
         server.setMotd(motd);
         // Directly modify motd in server.properties
-        OPanelServer.writePropertiesContent(OPanelServer.getPropertiesContent().replaceAll("motd=.+", "motd="+ motd));
+        String formatted = motd.replaceAll("\n", Matcher.quoteReplacement("\\n"));
+        OPanelServer.writePropertiesContent(OPanelServer.getPropertiesContent().replaceAll("motd=.+", Matcher.quoteReplacement("motd="+ formatted)));
     }
 
     @Override
     public String getVersion() {
-        return server.getBukkitVersion();
+        // getBukkitVersion() -> "<MinecraftVersion>-R0.x-SNAPSHOT"
+        return server.getBukkitVersion().split("-")[0];
     }
 
     @Override
@@ -155,13 +168,37 @@ public class SpigotServer implements OPanelServer {
     }
 
     @Override
+    public void removePlayerData(String uuid) throws IOException {
+        final Path playerDataFolder = server.getWorlds().get(0).getWorldFolder().toPath().resolve("playerdata");
+        Files.deleteIfExists(playerDataFolder.resolve(uuid +".dat"));
+        Files.deleteIfExists(playerDataFolder.resolve(uuid +".dat_old"));
+    }
+
+    @Override
+    public List<String> getBannedIps() {
+        return new ArrayList<>(server.getIPBans());
+    }
+
+    @Override
+    public void banIp(String ip) {
+        if(server.getIPBans().contains(ip)) return;
+        server.banIP(ip);
+    }
+
+    @Override
+    public void pardonIp(String ip) {
+        if(!server.getIPBans().contains(ip)) return;
+        server.unbanIP(ip);
+    }
+
+    @Override
     public boolean isWhitelistEnabled() {
         return server.hasWhitelist();
     }
 
     @Override
     public void setWhitelistEnabled(boolean enabled) {
-        server.setWhitelist(enabled);
+        plugin.runTask(() -> server.setWhitelist(enabled));
     }
 
     @Override
@@ -185,7 +222,7 @@ public class SpigotServer implements OPanelServer {
 
     @Override
     public HashMap<String, Object> getGamerules() {
-        final World world = server.getWorlds().getFirst();
+        final World world = server.getWorlds().get(0);
         HashMap<String, Object> gamerules = new HashMap<>();
         for(String key : world.getGameRules()) {
             GameRule<?> rule = GameRule.getByName(key);
@@ -198,18 +235,23 @@ public class SpigotServer implements OPanelServer {
     @Override
     @SuppressWarnings("unchecked")
     public void setGamerules(HashMap<String, Object> gamerules) {
+        HashMap<String, Object> currentGamerules = getGamerules();
         plugin.runTask(() -> {
-            final World world = server.getWorlds().getFirst();
+            final World world = server.getWorlds().get(0);
             gamerules.forEach((key, value) -> {
                 if(value == null) return;
+                final Object currentValue = currentGamerules.get(key);
+                if(value.equals(currentValue)) return;
                 GameRule<?> rule = GameRule.getByName(key);
                 if(rule == null) return;
-                if(value instanceof Boolean) {
+
+                if(rule.getType().equals(Boolean.class)) { // boolean
                     world.setGameRule((GameRule<Boolean>) rule, (Boolean) value);
-                } else if(value instanceof Number) {
-                    world.setGameRule((GameRule<Integer>) rule, Double.valueOf((double) value).intValue());
-                } else if(value instanceof String) {
-                    world.setGameRule((GameRule<String>) rule, (String) value);
+                } else if(rule.getType().equals(Integer.class)) { // integer
+                    int n = ((Number) value).intValue();
+                    world.setGameRule((GameRule<Integer>) rule, n);
+                } else { // string
+                    sendServerCommand("gamerule "+ key +" "+ value);
                 }
             });
         });
@@ -217,11 +259,7 @@ public class SpigotServer implements OPanelServer {
 
     @Override
     public void reload() {
-        if(Main.isPaper) {
-            sendServerCommand("reload confirm");
-        } else {
-            sendServerCommand("reload");
-        }
+        plugin.runTask(server::reload);
     }
 
     @Override
@@ -231,6 +269,6 @@ public class SpigotServer implements OPanelServer {
 
     @Override
     public long getIngameTime() {
-        return server.getWorlds().getFirst().getTime();
+        return server.getWorlds().get(0).getTime();
     }
 }
